Trying to fix tricky softmax

--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "elegant-death",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "median-welding",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "limited-calculator",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Dual"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "level-attachment",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "convert (generic function with 187 methods)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "dying-december",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "zero (generic function with 23 methods)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "wired-efficiency",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "promote_rule (generic function with 126 methods)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "focused-portable",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "extract_derivative (generic function with 3 methods)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "military-ecology",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "derivativeСalculation (generic function with 2 methods)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "^ (generic function with 67 methods)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "progressive-comment",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "sqrt (generic function with 21 methods)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "drawn-monte",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "eight-lounge",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "max (generic function with 13 methods)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,12 +379,18 @@
     "function softmax(vector::Array)\n",
     "    e = exp(vector)\n",
     "    return e / sum(e)\n",
+    "#     z = [Dual(2.0, 1.0), Dual(21.0, 1.0)]\n",
+    "#     s = zero(vector[1])\n",
+    "#     for x in z\n",
+    "#        s = s + x \n",
+    "#     end    \n",
+    "#     return e / s\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "digital-thinking",
    "metadata": {},
    "outputs": [
@@ -394,7 +400,7 @@
        "iterate (generic function with 212 methods)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "golden-hamilton",
    "metadata": {},
    "outputs": [
@@ -420,7 +426,7 @@
        "jacobian (generic function with 1 method)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "id": "accessory-sperm",
    "metadata": {
     "scrolled": true
@@ -468,7 +474,7 @@
        " -0.196612   0.196612"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,41 +486,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "governmental-safety",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2×3 Array{Float64,2}:\n",
-       " 4.0   2.0   0.0\n",
-       " 0.0  27.0  36.0"
+       "5×3 Array{Float64,2}:\n",
+       " 1.0        0.0         0.0\n",
+       " 0.0        0.0        -0.555556\n",
+       " 0.0       16.0        -2.0\n",
+       " 1.62091    0.0         0.841471\n",
+       " 0.377539  -0.0755078  -0.0755078"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f(x::Vector) = [2x[1]*x[2], 3x[2]*x[3]^2]\n",
+    "f(x::Vector) = [x[1], 5/x[3], 4x[2]^2-2x[3], x[3]*sin(x[1]), exp(x[1])/sum(x)]\n",
     "J(f, [1, 2., 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "careful-modification",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "linear (generic function with 2 methods)"
+       "linear (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "every-verification",
    "metadata": {},
    "outputs": [
@@ -537,7 +546,7 @@
        "24"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "catholic-judges",
    "metadata": {},
    "outputs": [
@@ -568,7 +577,7 @@
        " 0.6652409557748219"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +641,7 @@
     {
      "data": {
       "text/plain": [
-       "f (generic function with 1 method)"
+       "f (generic function with 2 methods)"
       ]
      },
      "execution_count": 23,
@@ -694,26 +703,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "assumed-racing",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "softmax (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "falling-congress",
    "metadata": {},
    "outputs": [
@@ -725,7 +723,7 @@
       "\u001b[91mUndefVarError: D not defined\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[27]:1",
+      " [1] top-level scope at In[26]:1",
       " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
      ]
     }
