--- a/BackwardDiff.ipynb
+++ b/BackwardDiff.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "\n",
     "function convert(::Type{Dual{T}}, x::S) where {T, S <: Number}\n",
-    "    print(\"2asdsadsda\", typeof(x))\n",
+    "    print(\"2asdsadsda\", typeof(x), \"\\n\")\n",
     "    Dual(T(x), zero(T), nothing, (dfdy, parents) -> nothing)\n",
     "end\n",
     "\n",
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "id": "boolean-rocket",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "D"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
     "    function dfdx(x::T) where T <: Number\n",
     "        # Pass the function a backward infinitesimal whose backprop function\n",
     "        # stores the backprop derivative in dfdx_store\n",
-    "        print(\"x::T\")\n",
+    "        print(\"x::T\", \"\\n\")\n",
     "\n",
     "        x = Dual(x, zero(x), 1, (dfdy, parents) -> nothing)\n",
     "\n",
@@ -312,10 +312,12 @@
     "    end\n",
     "\n",
     "    function dfdx(x::Array{T}, i) where T <: Number\n",
-    "        print(\"array\")\n",
+    "        print(\"array\", \"\\n\")\n",
     "        fargs = [Dual(xelt, zero(xelt), i, (dfdy, parents) -> nothing) for (i, xelt) in enumerate(x)]\n",
     "        result = f(fargs)[i]\n",
+    "#         println(result)\n",
     "        result.dfdy = one(result.x)\n",
+    "        println(result)\n",
     "        backprop!(result)\n",
     "        y = collect_outputs(result)\n",
     "        grad = zeros(typeof(result.x), length(x))\n",
@@ -327,7 +329,7 @@
     "    end\n",
     "\n",
     "    function dfdx(x...)\n",
-    "        print(\"x...\")\n",
+    "        print(\"x...\", \"\\n\")\n",
     "\n",
     "        fargs = [Dual(xelt, zero(xelt), i, (dfdy, parents) -> nothing) for (i, xelt) in enumerate(x)]\n",
     "        result = f(fargs...)\n",
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "religious-velvet",
    "metadata": {
     "scrolled": true
@@ -391,10 +393,11 @@
     "end\n",
     "\n",
     "function +(x::Dual{T}, y::Dual{T}) where T\n",
+    "    println(\"Przecieążenie +\")\n",
     "    Dual(x.x + y.x, zero(T), [x, y], bpp!)\n",
     "end\n",
     "\n",
-    "function bpm!(dfdy, xy)\n",
+    "function bpm!(dfdy, xy) \n",
     "    x, y = xy\n",
     "    x.dfdy += dfdy\n",
     "    y.dfdy -= dfdy\n",
@@ -442,7 +445,6 @@
     "end\n",
     "\n",
     "function exp(xs::Array)\n",
-    "    print(xs)\n",
     "    return [exp(x) for x in xs]\n",
     "end\n",
     "\n",
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "id": "center-gazette",
    "metadata": {},
    "outputs": [
@@ -528,7 +530,7 @@
        "softmax (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,14 +544,21 @@
     "end\n",
     "\n",
     "function softmax(vector::Array)\n",
-    "    e = exp(vector)    \n",
+    "    e = exp(vector)\n",
+    "#     e = [MathConstants.e^(x) for x in vector]\n",
+    "#     s = zero(vector[1])\n",
+    "#     z = [Dual(2.0, 1.0, nothing, (dfdy, parents) -> nothing), Dual(21.0, 1.0, nothing, (dfdy, parents) -> nothing)]\n",
+    "#     for x in z\n",
+    "#        s = s + x \n",
+    "#     end    \n",
+    "#     println(s, sum(e))\n",
     "    return e / sum(e)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "green-integral",
    "metadata": {},
    "outputs": [
@@ -559,7 +568,7 @@
        "jacobian (generic function with 1 method)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +576,7 @@
    "source": [
     "J = function jacobian(f, number_of_functions, args::Vector{T}) where {T <:Number}\n",
     "    jacobian_rows = Matrix{T}[]\n",
-    "    \n",
+    "    d = D(f)  \n",
     "    for i=1:number_of_functions\n",
     "#         x = Dual{T}[]\n",
     "#         for j=1:length(args)\n",
@@ -577,7 +586,6 @@
     "#                 Dual(args[j],zero(args[j])) )\n",
     "#         end\n",
     "#         temp  = [f(x)..]\n",
-    "        d = D(f)\n",
     "        rows = d(args,i)\n",
     "        push!(jacobian_rows, rows[:,:])\n",
     "    end\n",
@@ -587,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "id": "fitting-drawing",
    "metadata": {},
    "outputs": [
@@ -597,7 +605,7 @@
        "test (generic function with 1 method)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,17 +618,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "id": "encouraging-termination",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(::var\"#dfdx#12\"{typeof(test)}) (generic function with 3 methods)"
+       "(::var\"#dfdx#137\"{typeof(test)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "id": "available-willow",
    "metadata": {
     "scrolled": true
@@ -641,7 +649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x..."
+      "x...\n"
      ]
     },
     {
@@ -652,7 +660,7 @@
        " 2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 106,
    "id": "republican-boxing",
    "metadata": {},
    "outputs": [
@@ -673,19 +681,19 @@
        "f (generic function with 1 method)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# f(x::Vector) = [2x[1]*x[2], 3x[2]*x[3]^2]\n",
-    "f(x::Vector) = [x[1], 5*x[3], 4x[2]^2-2x[3], x[3]*sin(x[1])]\n"
+    "f(x::Vector) = [x[1], 5/x[3], 4x[2]^2-2x[3], x[3]*sin(x[1]), exp(x[1])/sum(x)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 107,
    "id": "agricultural-expression",
    "metadata": {},
    "outputs": [
@@ -693,41 +701,81 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64array2asdsadsdaInt642asdsadsdaInt642asdsadsdaInt64"
+      "array\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "Przecieążenie +\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(1.0, 1.0, 1, var\"#134#140\"())\n",
+      "array\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "Przecieążenie +\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(1.6666666666666665, 1.0, Dual{Float64}[Dual{Float64}(5.0, 0.0, nothing, var\"#3#4\"()), Dual{Float64}(3.0, 0.0, 3, var\"#134#140\"())], var\"#bp!#123\"{Float64}(0.3333333333333333))\n",
+      "array\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "Przecieążenie +\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(10.0, 1.0, Dual{Float64}[Dual{Float64}(16.0, 0.0, Dual{Float64}[Dual{Float64}(4.0, 0.0, nothing, var\"#3#4\"()), Dual{Float64}(4.0, 0.0, Dual{Float64}[Dual{Float64}(2.0, 0.0, 2, var\"#134#140\"()), Dual{Float64}(2.0, 0.0, 2, var\"#134#140\"())], bpt!)], bpt!), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(2.0, 0.0, nothing, var\"#3#4\"()), Dual{Float64}(3.0, 0.0, 3, var\"#134#140\"())], bpt!)], bpm!)\n",
+      "array\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "Przecieążenie +\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(2.5244129544236893, 1.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, 3, var\"#134#140\"()), Dual{Float64}(0.8414709848078965, 0.0, Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"()), var\"#bp!#125\"{Dual{Float64}}(Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"())))], bpt!)\n",
+      "array\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "2asdsadsdaInt64\n",
+      "Przecieążenie +\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(0.45304697140984085, 1.0, Dual{Float64}[Dual{Float64}(2.718281828459045, 0.0, Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"()), var\"#bp!#124\"{Float64}(2.718281828459045)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"()), Dual{Float64}(2.0, 0.0, 2, var\"#134#140\"())], bpp!), Dual{Float64}(3.0, 0.0, 3, var\"#134#140\"())], bpp!)], var\"#bp!#123\"{Float64}(0.16666666666666666))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "4-element Array{Array{Float64,2},1}:\n",
+       "5-element Array{Array{Float64,2},1}:\n",
        " [1.0; 0.0; 0.0]\n",
-       " [0.0; 0.0; 5.0]\n",
+       " [0.0; 0.0; -0.5555555555555556]\n",
        " [0.0; 16.0; -2.0]\n",
-       " [1.6209069176044193; 0.0; 0.8414709848078965]"
+       " [1.6209069176044193; 0.0; 0.8414709848078965]\n",
+       " [0.37753914284153406; -0.0755078285683068; -0.0755078285683068]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "J(f,4,[1.,2., 3.]) \n"
+    "J(f,5,[1.,2., 3.]) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 75,
    "id": "convenient-failing",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arrayDual{Float64}[Dual{Float64}(1.0, 0.0, 1, var\"#9#15\"()), Dual{Float64}(2.0, 0.0, 2, var\"#9#15\"())]arrayDual{Float64}[Dual{Float64}(1.0, 0.0, 1, var\"#9#15\"()), Dual{Float64}(2.0, 0.0, 2, var\"#9#15\"())]"
+      "array\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(0.2689414213699951, 1.0, Dual{Float64}[Dual{Float64}(2.718281828459045, 0.0, Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"()), var\"#bp!#124\"{Float64}(2.718281828459045)), Dual{Float64}(10.107337927389695, 0.0, Dual{Float64}[Dual{Float64}(2.718281828459045, 0.0, Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"()), var\"#bp!#124\"{Float64}(2.718281828459045)), Dual{Float64}(7.38905609893065, 0.0, Dual{Float64}(2.0, 0.0, 2, var\"#134#140\"()), var\"#bp!#124\"{Float64}(7.38905609893065))], bpp!)], var\"#bp!#123\"{Float64}(0.0989380198014472))\n",
+      "array\n",
+      "Przecieążenie +\n",
+      "Dual{Float64}(0.7310585786300049, 1.0, Dual{Float64}[Dual{Float64}(7.38905609893065, 0.0, Dual{Float64}(2.0, 0.0, 2, var\"#134#140\"()), var\"#bp!#124\"{Float64}(7.38905609893065)), Dual{Float64}(10.107337927389695, 0.0, Dual{Float64}[Dual{Float64}(2.718281828459045, 0.0, Dual{Float64}(1.0, 0.0, 1, var\"#134#140\"()), var\"#bp!#124\"{Float64}(2.718281828459045)), Dual{Float64}(7.38905609893065, 0.0, Dual{Float64}(2.0, 0.0, 2, var\"#134#140\"()), var\"#bp!#124\"{Float64}(7.38905609893065))], bpp!)], var\"#bp!#123\"{Float64}(0.0989380198014472))\n"
      ]
     },
     {
@@ -738,7 +786,7 @@
        " [-0.19661193324148188; 0.9276705118714866]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "id": "twenty-wisconsin",
    "metadata": {},
    "outputs": [
@@ -762,7 +810,7 @@
        " Dual{Float64}(2.0, 0.0, nothing, nothing)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 78,
    "id": "asian-toolbox",
    "metadata": {},
    "outputs": [
@@ -782,51 +830,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing), Dual{Float64}(3.0, 0.0, nothing, nothing)]"
+      "Przecieążenie +\n",
+      "Przecieążenie +\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3-element Array{Dual{Float64},1}:\n",
-       "  Dual{Float64}(0.45304697140984085, 0.0, Dual{Float64}[Dual{Float64}(2.718281828459045, 0.0, Dual{Float64}(1.0, 0.0, nothing, nothing), var\"#bp!#38\"{Float64}(2.718281828459045)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)], var\"#bp!#37\"{Float64}(0.16666666666666666))\n",
-       "      Dual{Float64}(1.231509349821775, 0.0, Dual{Float64}[Dual{Float64}(7.38905609893065, 0.0, Dual{Float64}(2.0, 0.0, nothing, nothing), var\"#bp!#38\"{Float64}(7.38905609893065)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)], var\"#bp!#37\"{Float64}(0.16666666666666666))\n",
-       " Dual{Float64}(3.3475894871979444, 0.0, Dual{Float64}[Dual{Float64}(20.085536923187668, 0.0, Dual{Float64}(3.0, 0.0, nothing, nothing), var\"#bp!#38\"{Float64}(20.085536923187668)), Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)], var\"#bp!#37\"{Float64}(0.16666666666666666))"
+       "Dual{Float64}(6.0, 0.0, Dual{Float64}[Dual{Float64}(3.0, 0.0, Dual{Float64}[Dual{Float64}(1.0, 0.0, nothing, nothing), Dual{Float64}(2.0, 0.0, nothing, nothing)], bpp!), Dual{Float64}(3.0, 0.0, nothing, nothing)], bpp!)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exp(x)/sum(x)\n"
+    "sum(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 97,
    "id": "efficient-details",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(::var\"#dfdx#67\"{typeof(f)}) (generic function with 3 methods)"
+       "(::var\"#dfdx#137\"{typeof(sum)}) (generic function with 3 methods)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = D(f)"
+    "d = D(sum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 101,
    "id": "advanced-deposit",
    "metadata": {},
    "outputs": [
@@ -834,49 +880,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arrayDual{Int64}[Dual{Int64}(18, 1, Dual{Int64}[Dual{Int64}(6, 0, Dual{Int64}[Dual{Int64}(3, 0, nothing, var\"#1#2\"()), Dual{Int64}(2, 0, 2, var\"#64#70\"())], bpt!), Dual{Int64}(3, 0, 3, var\"#64#70\"())], bpt!)]"
+      "array\n",
+      "Przecieążenie +\n",
+      "Dual{Int64}(3, 1, Dual{Int64}[Dual{Int64}(1, 0, 1, var\"#134#140\"()), Dual{Int64}(2, 0, 2, var\"#134#140\"())], bpp!)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3-element Array{Int64,1}:\n",
-       " 0\n",
-       " 9\n",
-       " 6"
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 1"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d([1,2,3],2)"
+    "d([1,2],1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "little-oklahoma",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "3-element Array{Float64,1}:\n",
-       " 0.09003057317038046\n",
-       " 0.24472847105479767\n",
-       " 0.6652409557748219"
+       "2-element Array{Float64,1}:\n",
+       " 0.2689414213699951\n",
+       " 0.7310585786300049"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "softmax([1,2,3])"
+    "softmax([1,2])"
    ]
   },
   {
