--- a/ADForward.ipynb
+++ b/ADForward.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "emerging-motorcycle",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "^ (generic function with 67 methods)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,8 @@
     "    Dual(-x.x, -x.dx)\n",
     "end\n",
     "function *(x::Dual, y::Dual)\n",
-    "    Dual(x.x*y.x, x.x*y.dx + x.dx*y.x)\n",
+    "     println(\"mnożenie\")\n",
+    "     Dual(x.x*y.x, x.x*y.dx + x.dx*y.x)\n",
     "end\n",
     "function /(x::Dual, y::Dual)\n",
     "    Dual(x.x/y.x, x.dx/y.x - x.x*y.dx/(y.x*y.x))\n",
@@ -281,6 +282,7 @@
     "    return [i / y for i in x]\n",
     "end\n",
     "function ^(a::Dual, x::Dual)\n",
+    "    println(\"Daszek\")\n",
     "    Dual(a.x^x.x, a.x^x.x*log(a.x)*x.dx)\n",
     "end"
    ]
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "valued-problem",
    "metadata": {},
    "outputs": [
@@ -370,7 +372,7 @@
        "softmax (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,13 +408,22 @@
     }
    ],
    "source": [
-    "function iterate(iter::Dual, state=1)\n",
-    "    if state > length(iter.val)\n",
+    "function iterate(iter::Vector{Dual}, state=1)\n",
+    "    println(iter, \"Test22232323\")\n",
+    "    if state > length(iter)\n",
     "        return nothing\n",
     "    end\n",
     "    return (iter[state],state+1)\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "gothic-architecture",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "accessory-sperm",
    "metadata": {
     "scrolled": true
@@ -474,7 +485,7 @@
        " -0.196612   0.196612"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "governmental-safety",
    "metadata": {},
    "outputs": [
@@ -501,7 +512,7 @@
        " 0.377539  -0.0755078  -0.0755078"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "exceptional-cloud",
+   "id": "related-insertion",
    "metadata": {},
    "outputs": [
     {
@@ -675,13 +686,13 @@
     }
    ],
    "source": [
-    "d= D(f)"
+    "d=D(ftest)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "smoking-plate",
+   "id": "fiscal-register",
    "metadata": {},
    "outputs": [
     {
@@ -698,135 +709,12 @@
     }
    ],
    "source": [
-    "d(-2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "assumed-racing",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "falling-congress",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: D not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: D not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[26]:1",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
-   "source": [
-    "d=D(softmax)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "copyrighted-import",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: d not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: d not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[28]:1",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
-   "source": [
-    "d(2, [1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "genuine-overall",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ftest (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function ftest(x)\n",
-    "    return 3^x\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "related-insertion",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: D not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: D not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[30]:1",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
-   "source": [
-    "d=D(ftest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "fiscal-register",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mUndefVarError: d not defined\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mUndefVarError: d not defined\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[31]:1",
-      " [2] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
-     ]
-    }
-   ],
-   "source": [
     "d(2.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "surrounded-stationery",
    "metadata": {},
    "outputs": [
@@ -836,7 +724,7 @@
        "Dual{Float64}(6.4, 6.1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,22 +735,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "removed-consumption",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "false-motivation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dual{Float64}(2.0, 4.3)"
+       "rosenbrock (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function rosenbrock(x::Vector)\n",
+    "    value = zero(x[1])\n",
+    "    for i=2:length(x)\n",
+    "        value += (1-x[i-1])^2 + 100*(x[i] - x[i-1]^2)^2\n",
+    "    end\n",
+    "    value\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "false-motivation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
+      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
+      "Dual{Float64}(100.0, -400.0)Test22232323sa\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "Dual{Float64}(100.0, 200.0)Test22232323sa\n",
+      "Dual{Float64}(100.0, 200.0)Test22232323sa\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "mnożenie\n",
+      "Dual{Float64}(100.0, 200.0)Test22232323sa\n",
+      "Dual{Float64}(100.0, 200.0)Test22232323sa\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1×2 Array{Float64,2}:\n",
+       " -400.0  200.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# d = derivativeСalculation(rosenbrock,[1.0,2.0,3.0])\n",
+    "J(rosenbrock, [1., 2.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fabulous-river",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
       ]
      },
      "execution_count": 33,
@@ -871,119 +831,74 @@
     }
    ],
    "source": [
-    "Dual(2,4.3)"
+    "rosenbrock([1,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "fabulous-river",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tgTest (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function tgTest(x)\n",
-    "    return tan(x)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "id": "efficient-advancement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(::var\"#df#1\"{typeof(tgTest)}) (generic function with 1 method)"
+       "rosenbrocka (generic function with 1 method)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d=D(tgTest)"
+    "function rosenbrocka(a, x)\n",
+    "#     value = zero(x[1])\n",
+    "    value = (1-a)^2 + 100*(x - a^2)^2\n",
+    "#     for i=2:length(x)\n",
+    "#         value += (1-x[i-1])^2 + 100*(x[i] - x[i-1]^2)^2\n",
+    "#     end\n",
+    "    value\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "id": "european-triumph",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dual{Int64}(5, 1)"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "12.427881707458354"
+       "200"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d(5)"
+    "derivativeСalculation(rosenbrocka,2,[1,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "recreational-study",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2.185039863261519"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tan(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "otherwise-things",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9092974268256817"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sin(2)"
    ]
